Portifolio foto real

--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Perfil online</title>
+    <title>Meu portifólio</title>
 </head>
 <body>
-     <img src="./IMG/fotoperfilnovo.jpg">
+     <img src="./IMG/fotorealperfil.JPG">
     <ul>
             <li> Sobre:</li>
             <li> Atividades:</li>
@@ -16,7 +16,7 @@
             <li>Habilidades:</li>
     </ul>
 <h1>Lucas Alcantara Rabello</h1>
-<img src="./IMG/foto2nova.jpg">
+<img src="./IMG/Fotoreal2.JPG">
 <p>Lucas Alcantara Rabello 26, estudante de desenvolvimento de sistemas na Etec de Embu</p>
 <p>Atualmente criando meu primeiro site em html, css,e JavaScript</p>
 <h3>Curiosidades</h3>
