--- a/Index.html
+++ b/Index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
+   <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Meu portifólio</title>
 </head>
 <body>
-     <img src="./IMG/fotorealperfil.JPG">
-    <ul>
+    <header>
+         <img src="./img/fotorealperfil.JPG">
+    <nav>
+        <ul>
             <li> Sobre:</li>
             <li> Atividades:</li>
             <li> Hobbies:</li>
             <li>Habilidades:</li>
-    </ul>
+        </ul>
+    </nav>
+    </header>
+</div>
 <h1>Lucas Alcantara Rabello</h1>
-<img src="./IMG/Fotoreal2.JPG">
+<img src="./img/Fotoreal2.JPG">
 <p>Lucas Alcantara Rabello 26, estudante de desenvolvimento de sistemas na Etec de Embu</p>
 <p>Atualmente criando meu primeiro site em html, css,e JavaScript</p>
 <h3>Curiosidades</h3>
@@ -32,14 +38,14 @@
     <li>lucas.rabello@etec.sp.gov.br</li>
     <li>20/04/1996</li>
 </ul>
-<img src="./IMG/linkedinovo.jpg">
-<img src="./IMG/githubnovo.png">
+<img src="./IMG/linkedin atualizado.png">
+<img src="./img/githubnovo.png">
 <h3>O que estou aprendendo</h3>
-<img src=".//IMG/htmlnovo.png">
+<img src=".//img/htmlnovo.png">
 <p>htlm</p>
-<img src="./IMG/cssnovo.png">
+<img src="./img/cssnovo.png">
 <p>css</p>
-<img src=".//IMG/JSnovo.png">
+<img src=".//img/JSnovo.png">
 <p>java</p>
 </body>
 </html> 
