--- a/Index.html
+++ b/Index.html
@@ -38,12 +38,12 @@
     <li>lucas.rabello@etec.sp.gov.br</li>
     <li>20/04/1996</li>
 </ul>
-<img src="./IMG/linkedin atualizado.png">
+<img src="./IMG/linkedin atualizado.png" class="linkedin" >
 <img src="./img/githubnovo.png">
 <h3>O que estou aprendendo</h3>
 <img src=".//img/htmlnovo.png">
 <p>htlm</p>
-<img src="./img/cssnovo.png">
+<img src="./img/cssnovo.png" class="logocss">
 <p>css</p>
 <img src=".//img/JSnovo.png">
 <p>java</p>
