--- a/Index.html
+++ b/Index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./CSS/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./JS/script.js"> </script>
     <title>Meu portifólio</title>
 </head>
 <body>
     <header>
-         <img src="./img/fotorealperfil.JPG">
+         <img src="./img/fotorealperfil.JPG" >
     <nav>
         <ul>
             <li> Sobre:</li>
@@ -22,7 +23,7 @@
     </header>
 </div>
 <h1>Lucas Alcantara Rabello</h1>
-<img src="./img/Fotoreal2.JPG">
+<img src="./img/Fotoreal2.JPG" >
 <p>Lucas Alcantara Rabello 26, estudante de desenvolvimento de sistemas na Etec de Embu</p>
 <p>Atualmente criando meu primeiro site em html, css,e JavaScript</p>
 <h3>Curiosidades</h3>
